[package]
name = "grin_wallet"
version = "4.0.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.grin", "**/*.grin2"]
build = "src/build/build.rs"
edition = "2018"

[[bin]]
name = "grin-wallet"
path = "src/bin/grin-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]
exclude = ["integration"]

[dependencies]
clap = { version = "2.31", features = ["yaml"] }
rpassword = "2.0.0"
failure = "0.1"
failure_derive = "0.1"
prettytable-rs = "0.7"
log = "0.4"
linefeed = "0.5"
semver = "0.9"
rustyline = "6"
lazy_static = "1"

grin_wallet_api = { path = "./api", version = "4.0.0-alpha.1" }
grin_wallet_impls = { path = "./impls", version = "4.0.0-alpha.1" }
grin_wallet_libwallet = { path = "./libwallet", version = "4.0.0-alpha.1" }
grin_wallet_controller = { path = "./controller", version = "4.0.0-alpha.1" }
grin_wallet_config = { path = "./config", version = "4.0.0-alpha.1" }

grin_wallet_util = { path = "./util", version = "4.0.0-alpha.1" }

[build-dependencies]
built = "0.3"

[dev-dependencies]
url = "1.7.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc = "0.5.1"
