[package]
name = "grin_wallet"
version = "5.0.0-rc.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.grin", "**/*.grin2"]
build = "src/build/build.rs"
edition = "2018"

[[bin]]
name = "grin-wallet"
path = "src/bin/grin-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]
exclude = ["integration"]

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
rpassword = "4.0"
failure = "0.1"
failure_derive = "0.1"
prettytable-rs = "0.8"
log = "0.4"
linefeed = "0.6"
semver = "0.10"
rustyline = "6"
lazy_static = "1"

grin_wallet_api = { path = "./api", version = "5.0.0-rc.1" }
grin_wallet_impls = { path = "./impls", version = "5.0.0-rc.1" }
grin_wallet_libwallet = { path = "./libwallet", version = "5.0.0-rc.1" }
grin_wallet_controller = { path = "./controller", version = "5.0.0-rc.1" }
grin_wallet_config = { path = "./config", version = "5.0.0-rc.1" }

grin_wallet_util = { path = "./util", version = "5.0.0-rc.1" }

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

[dev-dependencies]
url = "2.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc-mw = "0.5.4"
