[package]
name = "grin_wallet_api"
version = "4.0.0-beta.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Grin Wallet API"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1"
rand = "0.6"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc-mw = "0.5.4"
chrono = { version = "0.4.11", features = ["serde"] }
ring = "0.16"
base64 = "0.12"
ed25519-dalek = "1.0.0-pre.3"

grin_wallet_libwallet = { path = "../libwallet", version = "4.0.0-beta.1" }
grin_wallet_config = { path = "../config", version = "4.0.0-beta.1" }
grin_wallet_impls = { path = "../impls", version = "4.0.0-beta.1" }
grin_wallet_util = { path = "../util", version = "4.0.0-beta.1" }

[dev-dependencies]
serde_json = "1"
tempfile = "3.1"
