[package]
name = "grin_apiwallet"
version = "1.1.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.grin", "**/*.grin2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.12"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
prettytable-rs = "0.7"
ring = "0.13"
term = "0.5"
tokio = "= 0.1.11"
tokio-core = "0.1"
tokio-retry = "0.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
url = "1.7.0"
chrono = { version = "0.4.4", features = ["serde"] }

grin_libwallet = { path = "../libwallet", version = "1.1.0" }
grin_wallet_config = { path = "../config", version = "1.1.0" }
#grin_refwallet = { path = "../refwallet", version = "1.1.0" }

grin_core = { path = "../../grin/core", version = "1.1.0" }
grin_keychain = { path = "../../grin/keychain", version = "1.1.0" }
grin_chain = { path = "../../grin/chain", version = "1.1.0" }
grin_util = { path = "../../grin/util", version = "1.1.0" }
grin_api = { path = "../../grin/api", version = "1.1.0" }
grin_store = { path = "../../grin/store", version = "1.1.0" }
