[package]
name = "bitgrin_wallet_config"
version = "2.0.0"
authors = ["Bitgrin Developers <bitgrin@protonmail.com>"]
description = "Configuration for grin wallet , a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

bitgrin_wallet_util = { path = "../util", version = "2.0.0" }

[dev-dependencies]
pretty_assertions = "0.5.1"
