[package]
name = "grin_wallet_config"
version = "5.4.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for grin wallet , a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.5"
dirs = "2.0"

grin_wallet_util = { path = "../util", version = "5.4.0-alpha.1" }

##### Grin Imports

# For Release
# grin_core = "5.3.3"
# grin_util = "5.3.3"

# For beta release

# grin_core = { git = "https://github.com/mimblewimble/grin", tag = "v5.2.0-beta.3"}
# grin_util = { git = "https://github.com/mimblewimble/grin", tag = "v5.2.0-beta.3" }

# For bleeding edge
grin_core = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_util = { git = "https://github.com/mimblewimble/grin", branch = "master" }

# For local testing
# grin_core = { path = "../../grin/core"}
# grin_util = { path = "../../grin/util"}

#####

[dev-dependencies]
pretty_assertions = "0.6"

