[package]
name = "grin_wallet_impls"
version = "5.2.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Concrete types derived from libwallet traits"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
thiserror = "1"
futures = "0.3"
rand = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
ring = "0.16"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
lazy_static = "1"
tokio = { version = "1.8", features = ["full"] }
reqwest = { version = "0.10", features = ["rustls-tls", "socks"] }

#Socks/Tor/Bridge/Proxy
byteorder = "1"
ed25519-dalek = "1.0.0-pre.4"
x25519-dalek = "0.6"
data-encoding = "2"
regex = "1.3"
timer = "0.2"
sysinfo = "0.14"
base64 = "0.12.0"
url = "2.1"

grin_wallet_util = { path = "../util", version = "5.2.0-alpha.1" }
grin_wallet_config = { path = "../config", version = "5.2.0-alpha.1" }
grin_wallet_libwallet = { path = "../libwallet", version = "5.2.0-alpha.1" }

[dev-dependencies]
"remove_dir_all" = "0.7"