[package]
name = "bitgrin_wallet_util"
version = "2.0.0"
authors = ["Bitgrin Developers <bitgrin@protonmail.com>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

# For Release
# bitgrin_core = "2.0.0"
# bitgrin_keychain = "2.0.0"
# # bitgrin_chain = "2.0.0"
# bitgrin_util = "2.0.0"
# bitgrin_api = "2.0.0"
# bitgrin_store = "2.0.0"

# For beta release
# bitgrin_core = { git = "https://github.com/bitgrin/grin", tag = "2.0.0-beta.2" }
# bitgrin_keychain = { git = "https://github.com/bitgrin/grin", tag = "2.0.0-beta.2" }
# bitgrin_chain = { git = "https://github.com/bitgrin/grin", tag = "2.0.0-beta.2" }
# bitgrin_util = { git = "https://github.com/bitgrin/grin", tag = "2.0.0-beta.2" }
# bitgrin_api = { git = "https://github.com/bitgrin/grin", tag = "2.0.0-beta.2" }
# bitgrin_store = { git = "https://github.com/bitgrin/grin", tag = "2.0.0-beta.2" }

# For bleeding edge
bitgrin_core = { git = "https://github.com/bitgrin/bitgrin", branch = "master" }
bitgrin_keychain = { git = "https://github.com/bitgrin/bitgrin", branch = "master" }
bitgrin_chain = { git = "https://github.com/bitgrin/bitgrin", branch = "master" }
bitgrin_util = { git = "https://github.com/bitgrin/bitgrin", branch = "master" }
bitgrin_api = { git = "https://github.com/bitgrin/bitgrin", branch = "master" }
bitgrin_store = { git = "https://github.com/bitgrin/bitgrin", branch = "master" }

# For local testing
#grin_core = { path = "../../grin/core", version= "2.0.0-beta.2"}
#grin_keychain = { path = "../../grin/keychain", version= "2.0.0-beta.2"}
#grin_chain = { path = "../../grin/chain", version= "2.0.0-beta.2"}
#grin_util = { path = "../../grin/util", version= "2.0.0-beta.2"}
#grin_api = { path = "../../grin/api", version= "2.0.0-beta.2"}
#grin_store = { path = "../../grin/store", version= "2.0.0-beta.2"}

[dev-dependencies]
pretty_assertions = "0.5.1"
