[package]
name = "grin_wallet_util"
version = "5.4.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
ed25519-dalek = "1.0.0-pre.4"
data-encoding = "2"
sha3 = "0.8"
thiserror = "1"

##### Grin Imports

# For Release
# grin_util = "5.3.3"

# For beta release

# grin_util = { git = "https://github.com/mimblewimble/grin", tag = "v5.2.0-beta.3" }

# For bleeding edge
grin_util = { git = "https://github.com/mimblewimble/grin", branch = "master" }

# For local testing

# grin_util = { path = "../../grin/util"}

#####

[dev-dependencies]
pretty_assertions = "0.6"
